--- a/consumer-demo/src/main/resources/application.yml
+++ b/consumer-demo/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10086/eureka,http://localhost:10087/eureka
+      defaultZone: http://localhost:10086/eureka
   instance:
     prefer-ip-address: true
     ip-address: 127.0.0.1
+feign:
+  hystrix:
+    enabled: true
