--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:mysql://localhost:3306/yun6
+    url: jdbc:mysql://localhost:3306/myschool
     username: root
     password: root
 mybatis:
@@ -12,7 +12,7 @@ mybatis:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10086/eureka,http://127.0.0.1:10087/eureka
+      defaultZone: http://127.0.0.1:10086/eureka
   instance:
     prefer-ip-address: true
     ip-address: 127.0.0.1
